--- a/Silksong-Rando/thunderstore/thunderstore.toml
+++ b/Silksong-Rando/thunderstore/thunderstore.toml
@@ -15,7 +15,9 @@ containsNsfwContent = false
 # dependencies are specified in the format AuthorName-PackageName = "version". You should always have at least BepInExPack_Silksong.
 [package.dependencies]
 BepInEx-BepInExPack_Silksong = "5.4.2304"
-
+silksong_modding-FsmUtil = "0.3.3"
+silksong_modding-SilksongPrepatcher = "1.2.0"
+silksong_modding-DataManager = "1.0.2"
 
 # in most cases you should not change this build block, or the first build.copy block; the dist and tmp directories are used
 # by other build scripts
