SOOO many changes, mainly making is maintain if a check has been collected, also added double jump to the checks

--- a/Silksong.Rando/thunderstore/thunderstore.toml
+++ b/Silksong.Rando/thunderstore/thunderstore.toml
@@ -18,6 +18,7 @@ BepInEx-BepInExPack_Silksong = "5.4.2304"
 silksong_modding-FsmUtil = "0.3.3"
 silksong_modding-SilksongPrepatcher = "1.2.0"
 silksong_modding-DataManager = "1.0.2"
+DerVorce-SkongGamemodes = "1.2.0"
 
 # in most cases you should not change this build block, or the first build.copy block; the dist and tmp directories are used
 # by other build scripts
