--- a/Silksong.Rando/Silksong.Rando.csproj
+++ b/Silksong.Rando/Silksong.Rando.csproj
@@ -36,15 +36,15 @@
         <EmbeddedResource Include="Resources\**" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Silksong.FilteredLogs" Version="1.0.0" />
         <PackageReference Include="BepInEx.Analyzers" Version="1.0.8" PrivateAssets="all"/>
         <PackageReference Include="BepInEx.Core" Version="5.4.21"/>
         <PackageReference Include="HarmonyX" Version="2.9.0"/>
-        <PackageReference Include="Harmonize" Version="1.0.2" />
+        <PackageReference Include="Harmonize" Version="1.0.3" />
         <PackageReference Include="Hamunii.BepInEx.AutoPlugin" Version="2.0.1" PrivateAssets="all"/>
         <PackageReference Include="Microsoft.Unity.Analyzers" Version="1.25.0" PrivateAssets="all"/>
         <PackageReference Include="Silksong.DataManager" Version="1.0.2" />
         <PackageReference Include="Silksong.FsmUtil" Version="0.3.1" />
-        <PackageReference Include="Silksong.I18N" Version="1.0.1" />
         <PackageReference Include="Silksong.PrepatcherPlugin" Version="1.2.0" />
         <PackageReference
                 Include="UnityEngine.Modules"
