Changed the wrong version number im stupid

--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         dotnet-version: 10.x
     - name: Build
-      run: dotnet build -c Release --verbosity normal
+      run: dotnet build Silksong.Rando.csproj -c Release --verbosity normal
     - name: Pack
       run: dotnet pack -o nuget/
     - name: Get Version
