--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -25,7 +25,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]
     outputs:
       version: ${{ steps.version.outputs.version }}
       attestation-url: ${{ steps.attest.outputs.attestation-url }}
@@ -46,7 +46,7 @@ jobs:
     - name: Get Version
       id: version
       run: |-
-        VERSION=$(dotnet build Silksong-Rando.csproj -getProperty:Version)
+        VERSION=$(dotnet build Silksong.Rando.csproj -getProperty:Version)
         echo Version is $VERSION
         echo "version=$VERSION" >> $GITHUB_OUTPUT
     - name: Upload thunderstore artifact
@@ -78,7 +78,7 @@ jobs:
   release-thunderstore:
     needs:
       - build
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]
     if: |
       (
         github.event_name == 'push' &&
@@ -119,7 +119,7 @@ jobs:
   release-nuget:
     needs:
       - build
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]
     if: |
       (
         github.event_name == 'push' && 
@@ -157,7 +157,7 @@ jobs:
   release-github:
     needs:
       - build
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]
     if: github.event_name == 'push' && needs.build.outputs.allow-release == 'true' && needs.build.outputs.is-new-version == 'true'
 
     steps:
