--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -25,7 +25,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: [self-hosted, linux, x64]
+    runs-on: [self-hosted, linux]
     outputs:
       version: ${{ steps.version.outputs.version }}
       attestation-url: ${{ steps.attest.outputs.attestation-url }}
@@ -78,7 +78,7 @@ jobs:
   release-thunderstore:
     needs:
       - build
-    runs-on: [self-hosted, linux, x64]
+    runs-on: [self-hosted, linux]
     if: |
       (
         github.event_name == 'push' &&
@@ -119,7 +119,7 @@ jobs:
   release-nuget:
     needs:
       - build
-    runs-on: [self-hosted, linux, x64]
+    runs-on: [self-hosted, linux]
     if: |
       (
         github.event_name == 'push' && 
@@ -157,7 +157,7 @@ jobs:
   release-github:
     needs:
       - build
-    runs-on: [self-hosted, linux, x64]
+    runs-on: [self-hosted, linux]
     if: github.event_name == 'push' && needs.build.outputs.allow-release == 'true' && needs.build.outputs.is-new-version == 'true'
 
     steps:
