--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -35,6 +35,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v5
+    - name: Set DOTNET_INSTALL_DIR
+      run: |
+        echo "DOTNET_INSTALL_DIR=$HOME/.dotnet" >> $GITHUB_ENV
+        echo "$HOME/.dotnet" >> $GITHUB_PATH
     - name: Setup .NET
       uses: actions/setup-dotnet@v5
       with:
