--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -101,6 +101,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v5
+    - name: Set DOTNET_INSTALL_DIR
+      run: |
+        echo "DOTNET_INSTALL_DIR=$HOME/.dotnet" >> $GITHUB_ENV
+        echo "$HOME/.dotnet" >> $GITHUB_PATH
     - name: Setup .NET
       uses: actions/setup-dotnet@v5
       with:
@@ -141,6 +145,10 @@ jobs:
       NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
 
     steps:
+    - name: Set DOTNET_INSTALL_DIR
+      run: |
+        echo "DOTNET_INSTALL_DIR=$HOME/.dotnet" >> $GITHUB_ENV
+        echo "$HOME/.dotnet" >> $GITHUB_PATH
     - name: Setup .NET
       uses: actions/setup-dotnet@v5
       with:
