--- a/Silksong.Rando.csproj
+++ b/Silksong.Rando.csproj
@@ -75,6 +75,7 @@
         <Folder Remove="thunderstore/temp;thunderstore/dist"/>
         <None Include="README.md" Pack="True" PackagePath="README.md"/>
         <None Include="thunderstore/icon.png" Pack="True" PackagePath="icon.png"/>
+        <None Include="LICENSE.txt" Pack="True" PackagePath="LICENSE.txt"/>
     </ItemGroup>
 
     <Target Name="CopyAndPackageMod" AfterTargets="PostBuildEvent">
