Added a error on the menu if the mod is out of date, re checks every time the game opens. Also made it so that you only need to change the version number in one place.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,6 +11,7 @@
     It should follow the format major.minor.patch (semantic versioning). If you publish your mod
     as a library to NuGet, this version will also be used as the package version.
     -->
-    <Version>0.1.2</Version>
+    <Version>0.1.3</Version>
+    <GitHubRepo>timothymarriott/Silksong-Rando</GitHubRepo>
   </PropertyGroup>
 </Project>
