--- a/thunderstore/thunderstore.toml
+++ b/thunderstore/thunderstore.toml
@@ -5,7 +5,7 @@ schemaVersion = "0.0.1"
 # The name of the team you are publishing as
 namespace = "timothymarriott"
 # max 250 characters
-description = "Silksong Rando"
+description = "This is a Silksong item randomiser. THIS IS IN ALPHA THERE WILL BE BUGS"
 
 # Replace this with a correct repo URL if the default is not accurate
 websiteUrl = "https://github.com/timothymarriott/Silksong-Rando"
